changed textboxes to readonly

--- a/views/clinician_patient_data.hbs
+++ b/views/clinician_patient_data.hbs
@@ -135,7 +135,7 @@
                         <input type="checkbox">
                     </div>
                     <div class="wt-grid-item size-5@t">
-                        <p>Blood Glucose Level (mmol/L)</p>
+                        <p style="font-size: 24px">Blood Glucose Level (mmol/L)</p>
                     </div>
                     <div class="wt-grid-item size-2@t">
                         <input name="lowerThreshold" type="text" placeholder="0"/>
@@ -218,9 +218,7 @@
                     <span class="wt-modal-close">&times;</span>
                 </div>
                 <div class="wt-grid-item size-12@t" style="padding: 5px;">
-                    <div class ="wt-card" id="vertical_scroll_card" style="height: 70px; padding:15px">
-                        Ran a marathon today!!!
-                    </div>
+                    <textarea readonly rows="5">Ran a marathon today!!!</textarea>
                 </div>
             </div>
         </div>
