--- a/views/clinician_patient_profile.hbs
+++ b/views/clinician_patient_profile.hbs
@@ -49,16 +49,12 @@
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Given Name(s)</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    Jane
-                                </div>
+                                <input readonly name="givenNames" type="text" value="Jane" />
                             </div>
                             <div class="wt-grid-item size-1@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Family Name</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    Cooper
-                                </div>
+                                <input readonly name="familyName" type="text" value="Cooper" />
                             </div>
                         </div>
 
@@ -66,26 +62,20 @@
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Screen Name</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    Moondancer
-                                </div>
+                                <input readonly name="screenName" type="text" value="Moondancer" />
                             </div>
                             <div class="wt-grid-item size-1@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Email</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    janecooper135@gmail.com
-                                </div>
+                                <input readonly name="email" type="text" value="janecooper135@gmail.com" />
                             </div>
                         </div>
 
                         <div class="wt-grid-container">
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
-                                <label>Date of Birth</label>
-                                <div class="wt-card" id="horizontal_scroll_card">
-                                    05/12/2000
-                                </div>
+                                <label>Year of Birth</label>
+                                <input readonly name="yearOfBirth" type="text" value="2000" />
                             </div>
                         </div>
 
@@ -93,9 +83,7 @@
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-11@p size-11@t">
                                 <label>Bio</label>
-                                <div class="wt-card" id="vertical_scroll_card" style="height: 70px; padding: 15px">
-                                    Patient's bio. Have a history of ..., tends to ...
-                                </div>
+                                <textarea readonly rows="5">Bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
                             </div>
                         </div>
 
