UI done for welcome message & engagement rate in patient_home

--- a/views/patient_home.hbs
+++ b/views/patient_home.hbs
@@ -2,22 +2,29 @@
 {{> header}}
 <div class="panel-content">
     <div class="wt-grid-container">
-        <div class="wt-grid-item size-12@p size-9@t">
+        <div class="wt-grid-item size-12@p size-9@t wt-color-primary">
             <h1>Welcome back 👋</h1>
-            <p>Pat</p>
+        </div>
+        <div class="wt-grid-item size-6@p size-10@t wt-color-primary">
+            <h1>Pat</h1>
+        </div>
+        <div class="wt.grid.item size.6@p size.2@t wt-text-align-right">
+            <div class="wt-engagement">
+                <h3>🔥<u>85</u>% rate</h3>
+            </div>
         </div>
 
-        <div class="wt-grid-item size-12@p size-10@t">
+        {{!<div class="wt-grid-item size-12@p size-10@t">
             <h3>Title 3</h3>
             <p>Subtitle</p>
-        </div>
+        </div>!}}
+
         <div class="wt-grid-item size-12@p size-12@t">
             <div class="wt-card">
-                <div class="wt-card-content">
+                <div class="wt-notif-top">
                     <div class="wt-grid-container align-items-center">
-                        <div class="wt-grid-item size-11@p size-11@t">
-                            <label>First Name</label>
-                            <input type="text" />
+                        <div class="wt-grid-item size-11@p size-11@t wt-color-white">
+                            <h1>Notifications</h1>
                         </div>
                         <div class="wt-grid-item size-1@p size-1@t">
                             <button class="wt-btn-icon" onclick="openModal('addPatientModal')"><i
