UI done for Notifications in patient_home

--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -372,6 +372,19 @@ a {
     vertical-align: middle;
 }
 
+.wt-engagement {
+    user-select: none;
+    border: none;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    min-height: 31px;
+    min-width: 70px;
+    padding: 2px 16px;
+    border-radius: 25px;
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .wt-btn-large {
     line-height: 42px !important;
     font-size: 16px !important;
@@ -459,6 +472,34 @@ a {
 
 .wt-card-content {
     padding: 8px;
+}
+
+.wt-notif-top {
+    border-radius: 7px 7px 0px 0px;
+    background-color: var(--primary-color);
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: var(--primary-color);
+}
+.wt-notif-content {
+    border-radius: 0%;
+    padding: 8px;
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: var(--primary-color);
+}
+
+.wt-notif-content-bot {
+    border-radius: 0px 0px 7px 7px;
+    padding: 8px;
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: var(--primary-color);
+}
+
+.wt-card-content-primary {
+    padding: 8px;
+    background-color: var(--primary-color-text);
 }
 
 input,
