added comment icon to each datapoint

--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -59,20 +59,28 @@
                         </div>
                         <div class="wt-grid-item size-2@t">
                             data
-                        </div>
-                        <div class="wt-grid-item size-2@t">
-                            data
-                        </div>
-                        <div class="wt-grid-item size-2@t">
-                            data
-                        </div>
-                        <div class="wt-grid-item size-2@t">
-                            data
-                        </div>
-                        <div class="wt-grid-item size-1@t">
-                            <i class="material-icons" style="cursor: pointer;"
+                            <i class="material-icons" style="font-size: smaller; cursor: pointer;"
                                 onclick="openModal('patientCommentModal')">message</i>
                         </div>
+                        <div class="wt-grid-item size-2@t">
+                            data
+                            <i class="material-icons" style="font-size: smaller; cursor: pointer;"
+                                onclick="openModal('patientCommentModal')">message</i>
+                        </div>
+                        <div class="wt-grid-item size-2@t">
+                            data
+                            <i class="material-icons" style="font-size: smaller; cursor: pointer;"
+                                onclick="openModal('patientCommentModal')">message</i>
+                        </div>
+                        <div class="wt-grid-item size-2@t">
+                            data
+                            <i class="material-icons"  style="font-size: smaller; cursor: pointer;"
+                                onclick="openModal('patientCommentModal')">message</i>
+                        </div>
+                        {{!-- <div class="wt-grid-item size-1@t">
+                            <i class="material-icons" style="cursor: pointer;"
+                                onclick="openModal('patientCommentModal')">message</i>
+                        </div> --}}
                     </div>
                 </div>
             </div>
