--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -53,7 +53,7 @@
                         </div>
                         <div class="wt-grid-item size-2@t">
 
-                            <a href="./clinician_patient_data">
+                            <a href="./clinician_dashboard/{{_id}}/clinician_patient_data">
                                 {{givenName}} {{familyName}}
                             </a>
                         </div>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="wt-grid-item size-12@t">
                         <label>Bio</label>
-                        <textarea rows="5"></textarea>
+                        <textarea rows="5" name="bio"></textarea>
                     </div>
                     <div class="wt-grid-item size-12@t">
                         <div class="wt-text-align-right">
