--- a/views/partials/clinician_sidebar.hbs
+++ b/views/partials/clinician_sidebar.hbs
@@ -5,25 +5,25 @@
         </div>
         <ul class="panel-sidebar-menu">
             <li>
-                <a href="./clinician_dashboard">
+                <a href="/clinician_dashboard">
                     <span class="menu-icon"><i class="material-icons">dashboard</i></span>
                     <span class="menu-title">Dashboard</span>
                 </a>
             </li>
             <li>
-                <a href="./clinician_profile">
+                <a href="/clinician_profile">
                     <span class="menu-icon"><i class="material-icons">person</i></span>
                     <span class="menu-title">Profile</span>
                 </a>
             </li>
             <li>
-                <a href="./clinician_patients_comments">
+                <a href="/clinician_patients_comments">
                     <span class="menu-icon"><i class="material-icons">message</i></span>
                     <span class="menu-title">Patient comments</span>
                 </a>
             </li>
             <li>
-                <a href="./login">
+                <a href="/login">
                     <span class="menu-icon"><i class="material-icons">logout</i></span>
                     <span class="menu-title">Logout</span>
                 </a>
