few changes in the UI

--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -943,9 +943,9 @@ ul {
     overflow-y: auto;
 } */
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
-} */
+}
 
 .display_flex_center {
     display: flex;
